# pitchey-app

./: .credentials.tmp  .denolintignore  .dockerignore  .env.cloudflare  .env.coolify  .env.deploy  .env.deploy.template  .env.development  .env.email.example  .env.example  .env.production  .env.production.example  .env.sentry.template  .env.stripe.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .trigger-deploy  AB_TESTING_FRAMEWORK_GUIDE.md  ACCESS_CONTROL_IMPLEMENTATION.md  ADVANCED_CACHE_IMPLEMENTATION.md  ANALYTICS_IMPLEMENTATION_SUMMARY.md  API_CONFIGURATION_ANALYSIS.md  API_DOCUMENTATION.md  API_ENDPOINTS_DOCUMENTATION.md  API_ENDPOINT_ALIGNMENT_ISSUES.md  API_FIX_FINAL_SUMMARY.md  API_FIX_PHASE2_GUIDE.md  API_INCONSISTENCIES_REPORT.md  API_SDK_DOCUMENTATION.md  API_URL_MIGRATION.md  ARCHITECTURAL_INCONSISTENCIES_FIX.md  ARCHITECTURAL_SCALABILITY_REVIEW.md  ARCHITECTURE-EXPLANATION.md  ARCHITECTURE_BRIDGES.md  ARCHITECTURE_CONTEXT.md  AUTHENTICATION_FIX_REPORT.md  AUTHENTICATION_UPDATE_SUMMARY.md  AUTOMATED_BACKUP_GUIDE.md  AWS_S3_SETUP_GUIDE.md  (+1516 more)
.github/: PULL_REQUEST_TEMPLATE.md  SECRETS.md  dependabot.yml
archived_docs/: API_DOCUMENTATION.md  CLIENT_DEMO_SUMMARY.md  DEPLOYMENT_REFERENCE.md  DOCUMENTATION_ANALYSIS_REPORT.md  FINAL_HANDOFF_PACKAGE.md  HANDOFF_SUMMARY.md  PLATFORM_DELIVERY_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READINESS_CHECKLIST.md  PROJECT_FINAL_STATUS.md  PROJECT_OVERVIEW_AND_ALIGNMENT.md  README.md  REDIS_CLUSTER_DEPLOYMENT.md  STORAGE_SYSTEM_DOCUMENTATION.md  TEST_SUITE.md
archived_files/: schema.backup.20251002_233430.ts
archived_test_files/: add-production-pitches.ts  complete-schema-fix.ts  create-notifications.ts  fix-published-at-null.ts  fix-user-ids.ts  frontend-server.ts  update-test-nda.ts
coming-soon/: worker.js  wrangler.toml
config/: auto-scaling-manifest.yaml  cloudflare-scaling-config.yaml  smoke-tests-config.yaml
containers/: .env.example  CONTAINER_ARCHITECTURE_SUMMARY.md  README.md  deploy.sh  docker-compose.yml  nginx.conf
data/: follows.json  ndas.json
database-administration-scripts/: automated-maintenance.sql  backup-and-monitor.sh  disaster-recovery-runbook.md  user-management-monitoring.sql
docs/: AGENT_AND_MCP_TUTORIAL.md  ANALYTICS_ENGINE_ARCHITECTURE.md  API_DOCUMENTATION.md  API_ENDPOINT_CORRECTIONS.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  BETTER_AUTH_THREE_PORTAL_IMPLEMENTATION.md  CI_CD_PIPELINE.md  CLOUDFLARE_CONTAINERS_API_REFERENCE.md  CLOUDFLARE_CONTAINERS_ARCHITECTURE.md  CLOUDFLARE_CONTAINERS_DEPLOYMENT_GUIDE.md  CLOUDFLARE_PAGES_SETUP.md  COMPLETE_ERROR_FIXES_AND_PORTAL_IMPLEMENTATION.md  CONSOLE_LOG_ANALYSIS.md  CONTAINERS_MIGRATION_GUIDE.md  CONTAINERS_OPERATIONS_PLAYBOOK.md  CRAWL4AI_COMPLETE_INTEGRATION.md  CRITICAL_FIXES_JANUARY_2026.md  CRITICAL_ISSUES_REPORT.md  DATABASE_CONNECTION_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  ERROR_LOG_ANALYSIS_AND_FIXES.md  ERROR_STACK_SUMMARY.md  FIX-API-500-HSTS-WALKTHROUGH.md  GITHUB_DEPLOYMENT_SETUP.md  IMPLEMENTATION_STATUS.md  LOGGING.md  MARKETPLACE_NDA_WORKFLOW.md  MASTER_COMPLETION_GUIDE.md  MCP_INTEGRATION_GUIDE.md  MOBILE_DEVELOPMENT_GUIDE.md  MONITORING_AND_ERROR_FIXES.md  NAVIGATION_STRUCTURE.md  OBSERVABILITY.md  PLATFORM_COMPLETIVITY_TRACKER.md  PODMAN_DEVELOPMENT_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  RBAC-IMPLEMENTATION.md  (+20 more)
docs/sdks/python/: README.md  pyproject.toml
docs/sdks/python/pitchey_sdk/: __init__.py  base_client.py  client.py
drizzle/: 0000_shallow_medusa.sql  0001_cute_punisher.sql  0001_production_media_update.sql  0002_calm_dragon_lord.sql  0002_messaging_enhancement.sql  0003_email_notifications.sql  0004_search_indexes.sql  0004_search_indexes.sql.disabled  0005_add_missing_tables.sql  0005_add_missing_tables.sql.disabled  0006_content_management_system.sql  0007_add_security_columns.sql  0008_add_two_factor_column.sql  0009_add_format_category_fields.sql  0010_add_missing_tables.sql  (+5 more)
(+2749 files in other folders)
